<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dlvdo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/dlvdo" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/feedback" />
        <item
            android:id="@+id/command"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/reqguide" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/appcon">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/tuto" />
        </menu>
    </item>

</menu>
